--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <!-- Web App Config -->
     <title>NguyetDrop</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <meta name="theme-color" content="#3367d6">
+    <meta name="theme-color" content="#33b7fc">
     <meta name="color-scheme" content="dark light">
     <meta name="apple-mobile-web-app-capable" content="no">
     <meta name="apple-mobile-web-app-title" content="NguyetDrop">
