--- a/public/index.html
+++ b/public/index.html
@@ -17,8 +17,8 @@
     <meta name="author" content="TranTien">
     <meta property="og:title" content="NguyetDrop">
     <meta property="og:type" content="article">
-    <meta property="og:url" content="https://snapdrop.net/">
-    <meta property="og:author" content="https://facebook.com/RobinLinus">
+  <meta property="og:url" content="https://trantienvn.onrender.com">
+    <meta property="og:author" content="https://facebook.com/trantien0209">
     <meta name="twitter:author" content="@trantien">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:description" content="Chia sẻ ngay hình ảnh, video, PDF và liên kết với những người ở gần. Peer2Peer và Nguồn mở. Không cần thiết lập, không cần đăng ký.">
